--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "GIT_USER_ID/GIT_REPO_ID",
+    "name": "PokeMe/esi-php",
     "description": "",
     "keywords": [
         "swagger",
